--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         </table>
     </div>
     <div id="footer">
-        This resource is provided for your education. It isn't selling you anything. It isn't providing you a guarantee of safety or trustworthiness. It certainly isn't providing you <a href="https://jewishcurrents.org/how-to-give-yourself-an-abortion">medical advice</a>. <br /> <b>Caveat emptor. Caveat emptor.</b>
+        <p>This resource is provided for your education. It isn't selling you anything. It isn't providing you a guarantee of safety or trustworthiness. It certainly isn't providing you <a href="https://jewishcurrents.org/how-to-give-yourself-an-abortion">medical advice</a>.</p>
+        <p><b>Caveat emptor. Caveat emptor.</b></p>
+        <p class="help">If you're aware of other sellers of abortifacients, or want to report something wrong with the existing sources, please email me at boibortion@proton.me.</p>
     </div>
     </div>
 </body>
