Add some more medications

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <th>Product</th>
                 <th>Compound</th>
                 <th>Price</th>
-                <th>$ / pill</th>
+                <th>$ / unit</th>
                 <th>Website</th>
                 <th>Shipping</th>
                 <th>Abortifacient only?</th>
@@ -27,7 +27,7 @@
                 <td>Misoprostol</td>
                 <td>$28.50</td>
                 <td>$0.89</td>
-                <td><a href="https://www.alldaychemist.com/misoprost-200-mcg.html">AlldayChemist</a></td>
+                <td><a href="https://www.alldaychemist.com/misoprost-200-mcg.html">Allday Chemist</a></td>
                 <td>Ships from India</td>
                 <td>Yes</td>
             </tr>
@@ -56,6 +56,123 @@
                 <td>$7.85</td>
                 <td><a href="https://www.meds.com.mx/product_info.php/products_id/765">Medicina Mexico</a></td>
                 <td>Ships from Mexico</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Miropristone 50mg</td>
+                <td>Mifepristone</td>
+                <td>$257.60</td>
+                <td>$34.36</td>
+                <td><a href="https://otc-online-store.com/miropristone-buy-online-mifepristone">OTC-Online-Store</a></td>
+                <td>Ships from Russia</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Miropristone 10mg</td>
+                <td>Mifepristone</td>
+                <td>$13.80</td>
+                <td>$276.00</td>
+                <td><a href="https://otc-online-store.com/gynepriston-buy-online-mifepristone">OTC-Online-Store</a></td>
+                <td>Ships from Russia</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Miropristone 200mg</td>
+                <td>Mifepristone</td>
+                <td>(out of stock)</td>
+                <td>(out of stock)</td>
+                <td><a href="https://otc-online-store.com/miropristone-buy-online-mifepristone">OTC-Online-Store</a></td>
+                <td>Ships from Russia</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Methotrexate 2.5mg</td>
+                <td>Methotrexate</td>
+                <td>$9.14</td>
+                <td>$1.80</td>
+                <td><a href="https://farmacy-houses.com/oncology/methotrexate">Farmacy Houses</a></td>
+                <td>Ships from Russia</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Methotrexate 2.5mg</td>
+                <td>Methotrexate</td>
+                <td>$9.20</td>
+                <td>$1.80</td>
+                <td><a href="https://otc-online-store.com/methotrexate-tablets-buy-online">OTC-Online-Store</a></td>
+                <td>Ships from Russia</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Oncotrex 7.5mg</td>
+                <td>Methotrexate</td>
+                <td>$19.20</td>
+                <td>$2.23</td>
+                <td><a href="https://www.alldaychemist.com/oncotrex-7-5mg.html">Allday Chemist</a></td>
+                <td>Ships from India</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Oncotrex 7.5mg</td>
+                <td>Methotrexate</td>
+                <td>$19.20</td>
+                <td>$2.23</td>
+                <td><a href="https://www.alldaychemist.com/oncotrex-7-5mg.html">ReliableRxPharmacy</a></td>
+                <td>Ships from India</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Methotrexate 5mg</td>
+                <td>Methotrexate</td>
+                <td>$28.94</td>
+                <td>$2.90</td>
+                <td><a href="https://pilloid.com/11364-buy-methotrexate-pills-5-mg-50.html">Pilloid</a></td>
+                <td>Ships from Russia</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Imutrex 2.5mg</td>
+                <td>Methotrexate</td>
+                <td>$3.52</td>
+                <td>$3.50</td>
+                <td><a href="https://www.weborderpharmacy.md/Imutrex-Methotrexate-2.5mg-10-Tablets.html">Web Order Pharmacy</a></td>
+                <td>Ships from India</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Imutrex 2.5mg</td>
+                <td>Methotrexate</td>
+                <td>$3.69</td>
+                <td>$3.70</td>
+                <td><a href="https://www.unitedpharmacies.md/Imutrex-Methotrexate.html">United Pharmacies</a></td>
+                <td>Ships from Hong Kong</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Methotrexate 2.5mg</td>
+                <td>Methotrexate</td>
+                <td>$42.00</td>
+                <td>$4.20</td>
+                <td><a href="https://rxaisle.com/anti-cancer/methotrexate/methotrexate-25-mg-50-tablets-ingredient-methotrexate">RX Aisle</a></td>
+                <td>Ships from Turkiye</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Methotrexat 10mg</td>
+                <td>Methotrexate</td>
+                <td>$95.59</td>
+                <td>$4.78</td>
+                <td><a href="https://euaibolit.com/product/methotrexat-ebewe-methotrexat-10mg-tbl-nob-50/">EU-Aibolit</a></td>
+                <td>Ships from the EU</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Trexate 2.5mg</td>
+                <td>Methotrexate</td>
+                <td>$49.50</td>
+                <td>$5.50</td>
+                <td><a href="https://www.inhousepharmacy.vu/p-2236-trexate-tablets-2-5mg.aspx">Inhouse Pharmacy</a></td>
+                <td>Ships from Vanuatu</td>
                 <td>Yes</td>
             </tr>
             <tr>
