--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>abortion.menu</title>
+    <title>abortion.bar</title>
     <meta name="description" content="List of non-prescription abortion pill suppliers.">
     <link rel="icon" href="menu.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
