--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         </table>
     </div>
     <div id="footer">
+        <p>Misoprostol is also widely available in bulk powder form intended for horses. If you successfully obtain misoprostol from an online veterinary source please let me know, and I'll add it.</p>
         <p>This resource is provided for your education. It isn't selling you anything. It isn't providing you a guarantee of safety or trustworthiness. It certainly isn't providing you <a href="https://jewishcurrents.org/how-to-give-yourself-an-abortion">medical advice</a>.</p>
         <p><b>Caveat emptor. Caveat emptor.</b></p>
         <p class="help">If you're aware of other sellers of abortifacients, or want to report something wrong with the existing sources, please email me at boibortion@proton.me.</p>
